--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   <div class="container">
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
-        <h1>Hey, I’m Kate</h1>
-        <p>I'm a girl who codes!</p>
+        <h1>Hey, we're Emari and Audrey</h1>
+        <p>We are in the girls who code program!</p>
         <!-- banner text -->
       </div>
     </div>
