--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div class="container">
     <div class="col-md-8 col-md-offset-2 text-center">
       <h3>Need something?</h3>
-      <p>I can babysit or take care of pets.</p>
+      <p>jkg v jghkjd hgkjdh.</p>
       <a href="contact.html" class="btn btn-large">Hire me</a> </div>
   </div>
 </section>
