--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <section id="works" class="works section no-padding">
   <div class="container-fluid">
     <div class="row no-gutter">
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/kitty.jpg" class="work-box"> <img src="images/kitty.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/cat1.jpg" class="work-box"> <img src="images/cat1.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Project Name</h5>
@@ -70,7 +70,7 @@
         </div>
         <!-- overlay -->
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-2.jpg" class="work-box"> <img src="images/work-2.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/elephant1.jpg" class="work-box"> <img src="images/elephant1.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Project Name</h5>
@@ -79,7 +79,7 @@
         </div>
         <!-- overlay -->
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-3.jpg" class="work-box"> <img src="images/work-3.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/seal1.jpg" class="work-box"> <img src="images/seal1.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Project Name</h5>
@@ -88,7 +88,7 @@
         </div>
         <!-- overlay -->
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-4.jpg" class="work-box"> <img src="images/work-4.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/cat2.jpg" class="work-box"> <img src="images/cat2.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Project Name</h5>
@@ -97,7 +97,7 @@
         </div>
         <!-- overlay -->
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-5.jpg" class="work-box"> <img src="images/work-5.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/leopard1.jpg" class="work-box"> <img src="images/leopard1.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Project Name</h5>
@@ -106,7 +106,7 @@
         </div>
         <!-- overlay -->
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/work-6.jpg" class="work-box"> <img src="images/work-6.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/bunny1.jpg" class="work-box"> <img src="images/bunny1.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Project Name</h5>
