--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <!-- overlay -->
         </a> </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/zebra1.jpg" class="work-box"> <img src="images/zebra1.jpg" alt="">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/zebra1.png" class="work-box"> <img src="images/zebra1.jpg" alt="">
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Project Name</h5>
