--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <h1>Hey, I'm Audrey</h1>
-        <p>I'm in the girls who code program!</p>
+        <p>I'm in girls who code.</p>
         <!-- banner text -->
       </div>
     </div>
